build/log/idf_py_stderr_output_17850
Command: make -j 10 flash
In file included from /home/fus/Documents/DO-AN-02/comDriver/spi/../../helper/general.h:33,
                 from /home/fus/Documents/DO-AN-02/comDriver/spi/spi.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:1:
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.h: In function 'spiHandleCLKIsr':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.h:199:43: error: expected identifier before ',' token
  199 |             __spiLog1("%d|%d|%d|%c", dev->,dev->rxdBitInd, dev->rxdByteInd, rxBuf[dev->rxdByteInd]);
      |                                           ^
/home/fus/Documents/DO-AN-02/comDriver/spi/../../helper/espLogWrapper.h:22:94: note: in definition of macro '__log'
   22 |     #define __log(fmt, ...)     ets_printf("[%lld] [log] " fmt "\n", esp_timer_get_time(), ##__VA_ARGS__)
      |                                                                                              ^~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.h:199:13: note: in expansion of macro '__spiLog1'
  199 |             __spiLog1("%d|%d|%d|%c", dev->,dev->rxdBitInd, dev->rxdByteInd, rxBuf[dev->rxdByteInd]);
      |             ^~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'spiStartTransaction':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:469:22: warning: unused variable 'currByte' [-Wunused-variable]
  469 |             uint8_t *currByte = &txBuf[dev->txdByteInd];
      |                      ^~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:504:22: warning: unused variable 'currByte' [-Wunused-variable]
  504 |             uint8_t *currByte = &txBuf[dev->txdByteInd];
      |                      ^~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:448:13: warning: unused variable 'cpol' [-Wunused-variable]
  448 |     uint8_t cpol = __hasFlagBitSet(dev->conf, SPI_CPOL);
      |             ^~~~
make[3]: *** [esp-idf/spi/CMakeFiles/__idf_spi.dir/build.make:79: esp-idf/spi/CMakeFiles/__idf_spi.dir/spi.c.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:7589: esp-idf/spi/CMakeFiles/__idf_spi.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:3122: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:208: flash] Error 2
